@@ -5,7 +5,6 @@ Error handling
 General
 (*) Decent build instructions
 (*) Get object files into obj/ directory
-(*) Great Renaming of header files
 
 Porting
 (*) Port to mySQL etc., then refactor to separate front/back interfaces
